--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -18,11 +18,16 @@ jobs:
     timeout-minutes: 5
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: generate snake.svg
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: AbirChakraborty1703
-          outputs: dist/snake.svg?palette=github-dark
+          outputs: |
+            dist/snake.svg
+            dist/snake-dark.svg?palette=github-dark
 
 
       - name: push snake.svg to the output branch
