--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -26,8 +26,8 @@ jobs:
         with:
           github_user_name: AbirChakraborty1703
           outputs: |
-            dist/snake.svg
-            dist/snake-dark.svg?palette=github-dark
+            dist/snake.svg?palette=github
+            dist/snake-dark.svg?palette=github-dark&color_snake=white&color_dots=white,lightgray,gray,darkgray
 
 
       - name: push snake.svg to the output branch
