--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -26,8 +26,8 @@ jobs:
         with:
           github_user_name: AbirChakraborty1703
           outputs: |
-            dist/snake.svg?palette=github
-            dist/snake-dark.svg?palette=github-dark&color_snake=white&color_dots=white,lightgray,gray,darkgray
+            dist/snake.svg?palette=github-light&color_snake=#00d9ff&color_dots=#00d9ff,#39ff14,#ffff00,#ff6600,#ff0080
+            dist/snake-dark.svg?palette=github-dark&color_snake=#00d9ff&color_dots=#00d9ff,#39ff14,#ffff00,#ff6600,#ff0080
 
 
       - name: push snake.svg to the output branch
