--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -26,8 +26,8 @@ jobs:
         with:
           github_user_name: AbirChakraborty1703
           outputs: |
-            dist/snake.svg?palette=github-light&color_snake=#4A90E2&color_dots=#4A90E2,#7B68EE,#FF6B6B,#4ECDC4,#45B7D1,#96CEB4,#FFEAA7,#DDA0DD,#98D8C8,#F7DC6F
-            dist/snake-dark.svg?palette=github-dark&color_snake=#00D9FF&color_dots=#00D9FF,#7B68EE,#FF6B6B,#4ECDC4,#45B7D1,#96CEB4,#FFEAA7,#DDA0DD,#98D8C8,#F7DC6F
+            dist/snake.svg?palette=github-light&color_snake=#2E86AB&color_dots=#2E86AB,#A23B72,#F18F01,#C73E1D,#6A994E,#577590,#F8961E,#F9844A,#90A955,#264653
+            dist/snake-dark.svg?palette=github-dark&color_snake=#00D9FF&color_dots=#00D9FF,#FF6B9D,#45B7D1,#96CEB4,#FFEAA7,#DDA0DD,#98D8C8,#F7DC6F,#87CEEB,#FFA07A
 
 
       - name: push snake.svg to the output branch
