--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -26,8 +26,8 @@ jobs:
         with:
           github_user_name: AbirChakraborty1703
           outputs: |
-            dist/snake.svg?palette=github-light&color_snake=#228B22&color_dots=#32CD32,#228B22,#90EE90,#00FF00,#7CFC00,#ADFF2F,#9AFF9A,#98FB98,#00FF7F,#00FA9A
-            dist/snake-dark.svg?palette=github-dark&color_snake=#00FF00&color_dots=#32CD32,#228B22,#90EE90,#00FF00,#7CFC00,#ADFF2F,#9AFF9A,#98FB98,#00FF7F,#00FA9A
+            dist/snake.svg?palette=github-light&color_snake=%2300FF00&color_dots=%2300FF00,%2332CD32,%2300FF00,%2332CD32,%2300FF00,%2332CD32,%2300FF00,%2332CD32,%2300FF00,%2332CD32
+            dist/snake-dark.svg?palette=github-dark&color_snake=%2300FF00&color_dots=%2300FF00,%2332CD32,%2300FF00,%2332CD32,%2300FF00,%2332CD32,%2300FF00,%2332CD32,%2300FF00,%2332CD32
 
 
       - name: push snake.svg to the output branch
