--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -26,8 +26,8 @@ jobs:
         with:
           github_user_name: AbirChakraborty1703
           outputs: |
-            dist/snake.svg?palette=github-light&color_snake=#228B22&color_dots=#32CD32,#32CD32,#32CD32,#32CD32,#32CD32,#32CD32,#32CD32,#32CD32,#32CD32,#32CD32
-            dist/snake-dark.svg?palette=github-dark&color_snake=#32CD32&color_dots=#32CD32,#32CD32,#32CD32,#32CD32,#32CD32,#32CD32,#32CD32,#32CD32,#32CD32,#32CD32
+            dist/snake.svg?palette=github-light&color_snake=#006600&color_dots=#e6f7e6,#c2f0c2,#7dd87d,#4caf4c,#228b22,#1e7b1e,#196619,#0f5c0f,#006600,#004d00
+            dist/snake-dark.svg?palette=github-light&color_snake=#006600&color_dots=#e6f7e6,#c2f0c2,#7dd87d,#4caf4c,#228b22,#1e7b1e,#196619,#0f5c0f,#006600,#004d00
 
 
       - name: push snake.svg to the output branch
